examples/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aquifer
  namespace: aquifer
spec:
  selector:
    app: aquifer
  ports:
    - port: 8080
      targetPort: 8080
